--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Wenjun Gao's Homepage
+page-top-title: Wenjun Gao
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+home-subtitle:Wenjun Gao&ensp;|&ensp;高文均
+copyright-text: '&copy;WenJun Gao 2023-2024. All Rights Reserved.'
